# Recommendation-Systems-for-Personalized-Content-Discovery

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
app/: app.py
netflix_recsys.egg-info/: PKG-INFO  SOURCES.txt
src/: demo.py
src/data_pipeline/: eda.py  preprocess.py  sampler.py
src/models/: als_model.py  engine.py  metadata.py  metrics.py  svd_model.py  train_and_track.py
