[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netflix_recsys"
version = "0.1.0"
description = "Production-ready Netflix Recommendation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [] # Managed explicitly via requirements.txt for simplicity

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]